# REFLEX

./: .gitignore  CLAUDE.md  EDL Simulator v1 Mockup.html  README.md
REFLEX v1/: endo_market.md
archive/: README.md
endo_market_literature/: README.md
endo_market_v1/: README.md  build-prompt.md
endo_market_v2/: .gitignore  README.md  pyproject.toml  requirements.txt
endo_market_v2/configs/: sweep_feedback.yaml
endo_market_v2/endo_market/: config.py
endo_market_v2/endo_market/analysis/: __init__.py  analytic_boundary.py  factor_reduction.py  multi_dealer_modulus.py  plots.py  robust_boundary.py  sweep.py
endo_market_v2/endo_market/env/: liquidity_field.py
endo_market_v2/endo_market/equilibrium/: __init__.py  optimize_policy.py  perfgd_loop.py
endo_market_v2/endo_market/operator/: response_operator.py
endo_market_v2/endo_market/policy/: __init__.py
endo_market_v2/tests/: test_analytic_boundary.py  test_perfgd_loop.py  test_policy.py
endo_market_v4/: README.md  pyproject.toml
endo_market_v4/configs/: default.yaml  sweep_feedback.yaml
endo_market_v4/data/calibration/: scaler_stats.csv
endo_market_v4/experiments/: run_all.py  run_certificates.py  run_fragility.py  run_lazy_deploy.py  run_perfgd.py  run_single.py  run_tuning.py
endo_market_v4/lean/: README.md  Reflex.lean  lakefile.toml
endo_market_v4/lean/Reflex/: Contraction.lean  EchoChamber.lean  LazyDeploy.lean  MultiDealer.lean  Robust.lean
endo_market_v4/outputs/: dealer_joint_moduli.csv  lazy_deploy_summary.csv  lazy_deploy_sweep.csv  perfgd_gap_scan.csv  radius_calibration.csv  sinkhorn_tuning.csv  universe_scaling.csv
endo_market_v4/reflex/: __init__.py  config.py  types.py
endo_market_v4/reflex/analysis/: __init__.py  phase.py
endo_market_v4/reflex/calibration/: loader.py
endo_market_v4/reflex/env/: multi_dealer.py  simulator.py
endo_market_v4/reflex/equilibrium/: __init__.py  loops.py  structural_response.py
endo_market_v4/reflex/estimators/: __init__.py  br_slope.py  sinkhorn.py
endo_market_v4/reflex/objective/: __init__.py  stability.py
endo_market_v4/reflex/operator/: __init__.py
endo_market_v4/reflex/policy/: __init__.py
endo_market_v4/reflex/theory/: __init__.py  analytic_boundary.py  lazy_deploy.py  multi_dealer.py  robust.py
endo_market_v4/reflex/verification/: __init__.py  certificates.py
endo_market_v4/tests/: test_certificates.py  test_estimators.py  test_lazy_deploy.py  test_perfgd_ml.py  test_structural_perfgd.py  test_tuning.py
endo_market_v4/theory/: 02-perfgd-correction.md  03-multi-dealer-systemic-risk.md  04-robust-uncertainty.md  05-factor-model-scaling.md  README.md
(+220 files in other folders)
