[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endo_market"
version = "0.1.0"
description = "Performative prediction in an endogenous OTC bond market-making environment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Endo-Market Research" }]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
logging = ["wandb>=0.16"]

[project.scripts]
endo-run-single = "experiments.run_single:main"
endo-run-sweep = "experiments.run_sweep:main"

[tool.setuptools]
packages = [
    "endo_market",
    "endo_market.env",
    "endo_market.operator",
    "endo_market.policy",
    "endo_market.objective",
    "endo_market.equilibrium",
    "endo_market.analysis",
    "endo_market.utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: end-to-end RRM/sweep tests that invoke the full pipeline (deselect with -m 'not slow')",
]
